--- a/svc/style.css
+++ b/svc/style.css
@@ -19,7 +19,6 @@
 body {
   color: rgb(255, 255, 255);
   background: radial-gradient(var(--bgclr-1), var(--bgclr-2), var(--bgclr-3), var(--bgclr-4));
-  background-size: auto auto;
   margin-left: var(--pdgbr);
   /*Aniamted Keyframes*/
   animation: AnimationGrad 25s ease infinite;
@@ -40,7 +39,7 @@ body {
   }
 }
 /*Add space for the box on the left for the sidebar */
-#items {
+#centerboxitems {
   margin-left: 6.5rem;
   align-items: center;
 }
@@ -48,9 +47,8 @@ body {
 /*box for sidebar on the left*/
 .sidenav {
   border-right: 2px solid white;
-  height: 100%;
   width: 6rem;
-  position: flex;
+  height: 100%;
   float: left;
   top: 0;
   left: 0;
@@ -59,7 +57,7 @@ body {
   overflow: hidden;
 }
 
-.centertext {
+.centernavtext {
   display: flex;
   flex-direction: column;
   align-content: space-between;
@@ -82,9 +80,7 @@ body {
 /*border around the website*/
 .border {
   border: 2px solid rgb(255, 255, 255);
-  padding: 0;
-  margin: 0;
-  height: 100vh;
+  height: 100%;
   width: auto;
   overflow: hidden;
 }
