--- a/svc/style.scss
+++ b/svc/style.scss
@@ -17,76 +17,20 @@
   --pdgbr: 6rem;
 
   scroll-behavior: smooth;  
+
+  border: 2px solid rgb(255, 255, 255);
+  height: 100vh;
 }
 
-/*Animated Background */
+/* Background */
 body{
   color: rgb(255, 255, 255);
-  
-  background: radial-gradient(var(--bgclr-1),
+  background: linear-gradient(var(--bgclr-1),
   var(--bgclr-2),
   var(--bgclr-3),
   var(--bgclr-4));
-  // background-size: auto auto;
-  margin-left: var(--pdgbr);
-  
-  /*Aniamted Keyframes*/
-  -webkit-animation: AnimationGrad 25s ease infinite;
-  -moz-animation: AnimationGrad 25s ease infinite;
-  animation: AnimationGrad 25s ease infinite;
-
-  padding: 0;
+  background-repeat: no-repeat;
   margin: 0;
-
-}
-
-/*Background Animation frames*/
-@-webkit-keyframes AnimationGrad {
-  0%{background-position:0% 0%}
-  50%{background-position:0% 100%}
-  100%{background-position:0% 0%}
-}
-@-moz-keyframes AnimationGrad {
-  0%{background-position:0% 0%}
-  50%{background-position:0% 100%}
-  100%{background-position:0% 0%}
-}
-@keyframes AnimationGrad {
-  0%{background-position:0% 0%}
-  50%{background-position:0% 100%}
-  100%{background-position:0% 0%}
-}
-
-/*border around the website*/
-.border {
-  border: 2px solid rgb(255, 255, 255);
-  height: 100%;
-  width: auto;
-  overflow: hidden;
-} 
-
-/*sidebar box to the left of the website*/
-.sidebar {
-  border-right: 2px solid white;
-  width: 6rem;
-  height: 100%;
-  
-  float: left;
-  /*top: 0;*/
-  left: 0;
-  z-index: -1;
-  background: var(--bgclr-1);
-  overflow: hidden;
-}
-
-/* Centers sidebar content */
-.sidebaritems {
-  display: flex;
-  flex-direction: column;
-  align-content: space-between;
-  align-items: center;
-  height: 100%;
-  margin-left: 0.5;
 }
 
 /* The box in the center of the page */
@@ -95,9 +39,8 @@ body{
   border-left: 2px solid white;
   background: var(--bgclr-1);
   margin-left: 21rem;
-  height: 100%;
+  height: 100vh;
   width: 36rem;
-  z-index: 1;
   overflow: hidden;
 }
 
