--- a/svc/style.scss
+++ b/svc/style.scss
@@ -16,54 +16,30 @@
   /*pertentages*/
   --pdgbr: 6rem;
 
-  scroll-behavior: smooth;  
-
   border: 2px solid rgb(255, 255, 255);
-  height: 100vh;
 }
 
-/* Background */
-body{
+body {
   color: rgb(255, 255, 255);
-  background: linear-gradient(var(--bgclr-1),
-  var(--bgclr-2),
-  var(--bgclr-3),
-  var(--bgclr-4));
+  background: linear-gradient(var(--bgclr-1), var(--bgclr-2), var(--bgclr-3), var(--bgclr-4));
   background-repeat: no-repeat;
   margin: 0;
 }
 
-/* The box in the center of the page */
-.centerbox{
+.sidebar {
+  border-right: 2px solid white;
+  background: var(--bgclr-1);
+  margin-top: 0;
+  height: 100vh;
+  width: 6rem;
+  float: left;
+}
+
+.centerbox {
   border-right: 2px solid white;
   border-left: 2px solid white;
   background: var(--bgclr-1);
-  margin-left: 21rem;
-  height: 100vh;
+  margin-right: 15rem;
   width: 36rem;
-  overflow: hidden;
+  float: right;
 }
-
-/* Center items for the box in the middle of the page */
-#centerboxitems{
-  margin-left: 6.5rem;
-  align-items: center;
-}
-
-/*stylization of the scrollbar*/
-::-webkit-scrollbar {
-  width: .50rem;
-}
-
-::-webkit-scrollbar-track {
-    background-color: var(--trckclr-1)
-}
-
-  ::-webkit-scrollbar-thumb {
-  background-color: var(--trckclr-2);
-}
-
-	
-
-
-	
