--- a/svc/style.scss
+++ b/svc/style.scss
@@ -7,6 +7,7 @@
   --bgclr-2: #060019;
   --bgclr-3: #1a002d;
   --bgclr-4: #5f013e;
+  --pageheight: 150vh;
 
   /*track colors*/
   --trckclr-1: #000000;
@@ -23,16 +24,17 @@ body {
   color: rgb(255, 255, 255);
   background: linear-gradient(var(--bgclr-1), var(--bgclr-2), var(--bgclr-3), var(--bgclr-4));
   background-repeat: no-repeat;
+  height: flex;
   margin: 0;
 }
 
 .sidebar {
   border-right: 2px solid white;
   background: var(--bgclr-1);
-  margin-top: 0;
-  height: 100vh;
+  height:flex;
   width: 6rem;
   float: left;
+  align-items: center;
 }
 
 .centerbox {
@@ -41,14 +43,13 @@ body {
   background: var(--bgclr-1);
   margin-top: 0;
   margin-left: 12rem;
-  height: 100vh;
+  height: 100%;
   width: 42rem;
   float: left;
+  align-items: center;
+  padding-left: 4rem;
 }
 
-.allign-items {
-  align-items: center;
-}
 
 
 
