--- a/svc/style.scss
+++ b/svc/style.scss
@@ -24,17 +24,18 @@ body {
   color: rgb(255, 255, 255);
   background: linear-gradient(var(--bgclr-1), var(--bgclr-2), var(--bgclr-3), var(--bgclr-4));
   background-repeat: no-repeat;
-  height: flex;
+  height: 100vh;
   margin: 0;
 }
 
 .sidebar {
   border-right: 2px solid white;
   background: var(--bgclr-1);
-  height:flex;
-  width: 6rem;
+  height:100vh;
+  width: 4rem;
   float: left;
   align-items: center;
+  padding-left: 2rem;
 }
 
 .centerbox {
